infrastructure/cloudformation_eks/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: galaxy
spec:
  type: ExternalName
  externalName: b-cad46958-5e24-4f4d-a38b-5db68c173f9c.mq.us-east-2.amazonaws.com
  ports:
    - port: 5672
      targetPort: 5671
      protocol: TCP
